--- a/web/js/directives/header/header.html
+++ b/web/js/directives/header/header.html
@@ -51,7 +51,7 @@
                         <ul class="dropdown-menu-list scroller" style="height: 250px;" data-handle-color="#637283">
                                 
                             <li class="media" ng-repeat="x in alerts"  >
-                                <a href="javascript:;">
+                                <a ui-sref="main.realizar">
                                 <span class="icon">
                                             <i ng-class= x.tipo ></i>
                                 </span>
@@ -80,7 +80,7 @@
                         </a>
                     <ul class="dropdown-menu dropdown-menu-default">
                         <li>
-                            <a  href="#/dash/account">
+                            <a  ui-sref="main.account">
                                 <i class="icon-user"></i> Perfil </a>
                         </li>
                         <li>
