--- a/web/js/directives/header/header.html
+++ b/web/js/directives/header/header.html
@@ -60,6 +60,7 @@
                                             <span class="time">{{x.fecha}} </span>
                                         </span>
                                         <span class="message"> {{x.descripcion}}</span>
+                                        <span class="message"> {{x.horas}}</span>
                                 </a>
                             </li>
                                                          
