--- a/web/index.html
+++ b/web/index.html
@@ -117,6 +117,6 @@
         <script src="assets/layouts/global/scripts/quick-sidebar.min.js" type="text/javascript"></script>
         <script src="assets/layouts/layout4/scripts/demo.min.js" type="text/javascript"></script>
 
-
+        <script src="assets/global/plugins/checklist-model.js" type="text/javascript"></script>
     </body>
 </html>
