--- a/web/index.html
+++ b/web/index.html
@@ -79,6 +79,7 @@
         <script type="text/javascript" src="assets/global/plugins/lodash.js"></script>
         <script type="text/javascript" src="assets/global/plugins/xlsx.js"></script>
         <script type="text/javascript" src="assets/global/plugins/xlsx-reader.js"></script>
+        <script src="assets/global/plugins/bootstrap-confirmation/bootstrap-confirmation.min.js" type="text/javascript"></script>
 
 
         <script src="assets/global/plugins/angularjs/angular.min.js" type="text/javascript"></script>
