--- a/web/index.html
+++ b/web/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="es" data-ng-app="MetronicApp" style="background: white" ng-cloak>
-
-
+<html lang="es" data-ng-app="MetronicApp"  ng-cloak>
     <head>
         <title data-ng-bind="$state.current.data.pageTitle"> </title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
